BE Download Page - Color Contrast Accessibility Bug fixes (#2197)
* Color contrast accessibility bug fixes

* Minor fix: os download button border match to new green

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,7 +82,7 @@ a {
 
 .btn-link {
     border-radius: 0 !important;
-    background-color: #28a745 !important;
+    background-color: #165f28 !important;
     color: white !important;
     display: inline-grid !important;
     align-items: center;
@@ -92,7 +92,12 @@ a {
     margin: 2px;
 }
 
+.text-link {
+    color: #0078d4;
+}
+
 .os-download-btn {
+    border-color: #165f28 !important;
     min-width: 180px;
     height: 60px;
 }
@@ -143,7 +148,7 @@ a {
 }
 
 .os-download .alternate-downloads {
-    color:grey;
+    color: #CCCCCC;
 }
 
 .insider-builds-link  {
@@ -166,7 +171,7 @@ a {
 
 .swimlane p {
     line-height: 2.5rem;
-    color:gray;
+    color:#595959;
     /* font-size: 1.8rem; */
 }
 
@@ -203,7 +208,7 @@ footer .links li:not(:last-child) {
 }
 
 .warning {
-    color: orange;
+    color: #e31c3d;
 }
 
 .license-and-privacy {
